--- a/src/main/resources/static/html/poiExcelUpload.html
+++ b/src/main/resources/static/html/poiExcelUpload.html
@@ -22,10 +22,16 @@
   </head>
   <body>
     <div class="upload-btn">
-      <button type="button" class="btn btn-success">
-        엑셀 파일 업로드 하기
-      </button>
-      <button type="button" class="btn btn-primary">기본 형식</button>
+      <div class="input-group mb-3">
+        <input
+          type="file"
+          class="form-control excel-file"
+          id="inputGroupFile02"
+        />
+        <button class="input-group-text poi-upload-btn">파일 올리기</button>
+      </div>
+
+      <button type="button" class="btn btn-primary">기본 형식 다운로드</button>
     </div>
     <div class="upload-form">
       <table class="table">
